tests/toylang/neg/001381_mutation.toylang
program a = { var a : bool do } .
